# ai_tools

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.yaml  init.lua  init.lua.back  pyproject.toml
.clinerules/: inno.md
.sisyphus/: boulder.json
.sisyphus/drafts/: ui-bounded-agent-execution.md
.sisyphus/notepads/ui-bounded-agent-execution/: learnings.md
.sisyphus/plans/: ui-bounded-agent-execution.md
clients/: command.py  explain.py  form_config.json  multi_tool_client.py  proofread.py  question.py  refresh_model_cache_via_oci_cli.py  test_oci_list_models.py
docs/: README.md  clinerules.md  llm_models.md  usage.md
examples/: benchmark_models.py  hello_world.py
output/benchmarks/: results.md
output/reports/: results.md  results.txt
scripts/: debug_agent.py  main.py  min_mcp_client.py  proofread_client.py  run_app.sh  test_app.sh  test_oci_models.py
skills/: AGENTS.md
skills/ask/: SKILL.md
skills/commands/: SKILL.md
skills/explain/: SKILL.md
skills/proofread-email/: SKILL.md
skills/proofread-general/: SKILL.md
skills/proofread-slack/: SKILL.md
skills/refresh-llms/: SKILL.md
skills/refresh-llms/scripts/: refresh_llms.sh
src/ai_tools/: __init__.py  aitools_mcp_server.py  oci_client.py  oci_model_catalog_client.py  oci_openai_helper.py  proofread_mcp_server.py  techlookup_mcp_server.py
src/ai_tools/agent_runtime/: __init__.py  errors.py  routing.py  runtime.py  skills.py  types.py
src/ai_tools/utils/: config.py  model_cache.py  prompts.py
tests/: __init__.py  test_agent_routing.py  test_client_diagnostics.py  test_debug_agent.py  test_debug_skills.py  test_oci_models.py  test_proofread_server.py  test_runtime_failfast.py  test_runtime_structured.py  test_skill_discovery.py
